force-app/main/default/objects/Contact_Enrichment__c/Contact_Enrichment__c.object-meta.xml
<CustomObject>
    <description>Staging object for quarterly contact enrichment pipeline. Clay writes LinkedIn enrichment data here; GitHub Actions script reads and processes it to update Contacts.</description>
    <label>Contact Enrichment</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Contact Enrichment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Enrichments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>