force-app/main/default/objects/Contact_Enrichment__c/fields/Awards_JSON__c.field-meta.xml
<CustomField>
    <fullName>Awards_JSON__c</fullName>
    <label>Awards JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>