force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Company__c.field-meta.xml
<CustomField>
    <fullName>CE_Company__c</fullName>
    <label>CE Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>