force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>CE_Company_Domain__c</fullName>
    <label>CE Company Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>