force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>CE_Company_Id__c</fullName>
    <label>CE Company Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>