force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>CE_Company_URL__c</fullName>
    <label>CE Company URL</label>
    <type>Url</type>
</CustomField>