force-app/main/default/objects/Contact_Enrichment__c/fields/CE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_End_Date__c</fullName>
    <label>CE End Date</label>
    <type>Date</type>
</CustomField>