force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Is_Current__c.field-meta.xml
<CustomField>
    <fullName>CE_Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CE Is Current</label>
    <type>Checkbox</type>
</CustomField>