force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Locality__c.field-meta.xml
<CustomField>
    <fullName>CE_Locality__c</fullName>
    <label>CE Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>