force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>CE_Revenue_Range__c</fullName>
    <label>CE Revenue Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>