force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_Start_Date__c</fullName>
    <label>CE Start Date</label>
    <type>Date</type>
</CustomField>