force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Summary__c.field-meta.xml
<CustomField>
    <fullName>CE_Summary__c</fullName>
    <label>CE Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>