force-app/main/default/objects/Contact_Enrichment__c/fields/CE_Title__c.field-meta.xml
<CustomField>
    <fullName>CE_Title__c</fullName>
    <label>CE Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>