force-app/main/default/objects/Contact_Enrichment__c/fields/Certifications_JSON__c.field-meta.xml
<CustomField>
    <fullName>Certifications_JSON__c</fullName>
    <label>Certifications JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>