force-app/main/default/objects/Contact_Enrichment__c/fields/Connections__c.field-meta.xml
<CustomField>
    <fullName>Connections__c</fullName>
    <label>Connections</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>