force-app/main/default/objects/Contact_Enrichment__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>18-char Contact ID for upsert dedup. One enrichment record per Contact.</description>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>