force-app/main/default/objects/Contact_Enrichment__c/fields/Courses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Courses_JSON__c</fullName>
    <label>Courses JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>