force-app/main/default/objects/Contact_Enrichment__c/fields/Education_JSON__c.field-meta.xml
<CustomField>
    <fullName>Education_JSON__c</fullName>
    <label>Education JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>