force-app/main/default/objects/Contact_Enrichment__c/fields/Enrichment_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Quarter__c</fullName>
    <description>e.g. 2026-Q1</description>
    <label>Enrichment Quarter</label>
    <length>7</length>
    <type>Text</type>
</CustomField>