force-app/main/default/objects/Contact_Enrichment__c/fields/Experience_JSON__c.field-meta.xml
<CustomField>
    <fullName>Experience_JSON__c</fullName>
    <label>Experience JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>