force-app/main/default/objects/Contact_Enrichment__c/fields/Jobs_Count__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Count__c</fullName>
    <label>Jobs Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>