force-app/main/default/objects/Contact_Enrichment__c/fields/Languages_JSON__c.field-meta.xml
<CustomField>
    <fullName>Languages_JSON__c</fullName>
    <label>Languages JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>