force-app/main/default/objects/Contact_Enrichment__c/fields/Last_Enriched_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Enriched_Date__c</fullName>
    <label>Last Enriched Date</label>
    <type>DateTime</type>
</CustomField>