force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>LE_Company_Domain__c</fullName>
    <label>LE Company Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>