force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>LE_Company_URL__c</fullName>
    <label>LE Company URL</label>
    <type>Url</type>
</CustomField>