force-app/main/default/objects/Contact_Enrichment__c/fields/LE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LE_End_Date__c</fullName>
    <label>LE End Date</label>
    <type>Date</type>
</CustomField>