force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Is_Current__c.field-meta.xml
<CustomField>
    <fullName>LE_Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LE Is Current</label>
    <type>Checkbox</type>
</CustomField>