force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Locality__c.field-meta.xml
<CustomField>
    <fullName>LE_Locality__c</fullName>
    <label>LE Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>