force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>LE_Org_Id__c</fullName>
    <label>LE Org Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>