force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>LE_Revenue_Range__c</fullName>
    <label>LE Revenue Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>