force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LE_Start_Date__c</fullName>
    <label>LE Start Date</label>
    <type>Date</type>
</CustomField>