force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Summary__c.field-meta.xml
<CustomField>
    <fullName>LE_Summary__c</fullName>
    <label>LE Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>