force-app/main/default/objects/Contact_Enrichment__c/fields/LE_Title__c.field-meta.xml
<CustomField>
    <fullName>LE_Title__c</fullName>
    <label>LE Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>