force-app/main/default/objects/Contact_Enrichment__c/fields/LinkedIn_Org__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Org__c</fullName>
    <label>LinkedIn Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>