force-app/main/default/objects/Contact_Enrichment__c/fields/LinkedIn_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Person_Id__c</fullName>
    <label>LinkedIn Person Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>