force-app/main/default/objects/Contact_Enrichment__c/fields/LinkedIn_Slug__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Slug__c</fullName>
    <label>LinkedIn Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>