force-app/main/default/objects/Contact_Enrichment__c/fields/LinkedIn_Title__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Title__c</fullName>
    <label>LinkedIn Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>