force-app/main/default/objects/Contact_Enrichment__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <label>Location City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>