force-app/main/default/objects/Contact_Enrichment__c/fields/Location_Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Location_Country_ISO__c</fullName>
    <label>Location Country ISO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>