force-app/main/default/objects/Contact_Enrichment__c/fields/Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Location_Region__c</fullName>
    <label>Location Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>