force-app/main/default/objects/Contact_Enrichment__c/fields/Num_Followers__c.field-meta.xml
<CustomField>
    <fullName>Num_Followers__c</fullName>
    <label>Num Followers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>