force-app/main/default/objects/Contact_Enrichment__c/fields/Others_Named_JSON__c.field-meta.xml
<CustomField>
    <fullName>Others_Named_JSON__c</fullName>
    <label>Others Named JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>