force-app/main/default/objects/Contact_Enrichment__c/fields/Patents_JSON__c.field-meta.xml
<CustomField>
    <fullName>Patents_JSON__c</fullName>
    <label>Patents JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>