force-app/main/default/objects/Contact_Enrichment__c/fields/People_Also_Viewed_JSON__c.field-meta.xml
<CustomField>
    <fullName>People_Also_Viewed_JSON__c</fullName>
    <label>People Also Viewed JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>