force-app/main/default/objects/Contact_Enrichment__c/fields/Picture_URL_Copy__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL_Copy__c</fullName>
    <label>Picture URL Copy</label>
    <type>Url</type>
</CustomField>