force-app/main/default/objects/Contact_Enrichment__c/fields/Picture_URL_Original__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL_Original__c</fullName>
    <label>Picture URL Original</label>
    <type>Url</type>
</CustomField>