force-app/main/default/objects/Contact_Enrichment__c/fields/Projects_JSON__c.field-meta.xml
<CustomField>
    <fullName>Projects_JSON__c</fullName>
    <label>Projects JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>