force-app/main/default/objects/Contact_Enrichment__c/fields/Publications_JSON__c.field-meta.xml
<CustomField>
    <fullName>Publications_JSON__c</fullName>
    <label>Publications JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>