force-app/main/default/objects/Contact_Enrichment__c/fields/Record_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Record Created Date</label>
    <type>Date</type>
</CustomField>