force-app/main/default/objects/Contact_Enrichment__c/fields/Volunteering_JSON__c.field-meta.xml
<CustomField>
    <fullName>Volunteering_JSON__c</fullName>
    <label>Volunteering JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>